reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__projections.rs_line_304_col_5_001.log

*** crates/tracewake-core/src/projections.rs:304:5: replace actor_known_containers_for_context -> Vec<ActorKnownContainerSurface> with vec![Default::default()]

*** mutation diff:
--- crates/tracewake-core/src/projections.rs
+++ replace actor_known_containers_for_context -> Vec<ActorKnownContainerSurface> with vec![Default::default()]
@@ -296,30 +296,17 @@
     doors.sort();
     doors.dedup();
     doors
 }
 
 fn actor_known_containers_for_context(
     context: &KnowledgeContext,
 ) -> Vec<ActorKnownContainerSurface> {
-    let mut containers = context
-        .actor_known_containers()
-        .iter()
-        .map(
-            |fact: &ActorKnownContainerFact| ActorKnownContainerSurface {
-                container_id: fact.container_id().clone(),
-                is_open: fact.is_open(),
-                is_locked: fact.is_locked(),
-            },
-        )
-        .collect::<Vec<_>>();
-    containers.sort();
-    containers.dedup();
-    containers
+    vec![Default::default()] /* ~ changed by cargo-mutants ~ */
 }
 
 fn actor_known_items_for_context(context: &KnowledgeContext) -> Vec<ActorKnownItemSurface> {
     let mut items = context
         .actor_known_items()
         .iter()
         .map(|fact: &ActorKnownItemFact| ActorKnownItemSurface {
             item_id: fact.item_id().clone(),


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/projections.rs` has changed (1781904530.271923582s, 5s after last build at 1781904525.255923585s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `ActorKnownContainerFact`
 --> crates/tracewake-core/src/projections.rs:9:32
  |
9 |     ActorKnownCarriedItemFact, ActorKnownContainerFact, ActorKnownCurrentPlaceFact,
  |                                ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `ActorKnownContainerSurface: Default` is not satisfied
   --> crates/tracewake-core/src/projections.rs:304:10
    |
304 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ActorKnownContainerSurface`
   --> crates/tracewake-core/src/projections.rs:58:1
    |
 58 | struct ActorKnownContainerSurface {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
